# PhD-CM_Sonifying_Biology

./: Molecular-Art.md  README0.md  main.py  molecular_music_sonification.ipynb  pyproject.toml
supercollider_scripts/: molecular_synthdefs.scd  play_binding_event.scd  play_sequence.scd  play_simple_binding.scd
