[project]
name = "phd-cm-sonifying-biology"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "biopython>=1.86",
    "chembl-webresource-client>=0.10.9",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "python-osc>=1.9.3",
    "rdkit>=2025.9.1",
    "requests>=2.32.5",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
]
